--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -221,7 +221,7 @@
             </div>
           {% endif %}
           <p>
-          <a href="{%url 'blog:ricetta' ricetta.id ' ' %}">
+          <a href="{%url 'blog:ricetta' ricetta.id 'default' %}">
             <button class="toggle-description">
             Ingredienti e Preparazione
             </button>
