flex wrap in .ricetta on index.html

--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -35,7 +35,7 @@
                   margin-top: 50px;
                   text-align: left;             
           }
-         .elenco_ricette {display:flex;}
+         .elenco_ricette {display:flex; gap:20px; flex-wrap:wrap}
          .ricetta  {margin-left: 45px; padding: 10px; width: 400px; background-color: white;}
          .ricetta img {width: 300px;}
          .descrizione_ricetta {
