max-height in index.html for ricette

--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -36,7 +36,8 @@
                   text-align: left;             
           }
          .elenco_ricette {display:flex; gap:20px; flex-wrap:wrap}
-         .ricetta  {margin-left: 45px; padding: 10px; width: 400px; background-color: white;}
+         .ricetta  {margin-left: 45px; padding: 10px; width: 400px; background-color: white;
+                    max-height: 500px;}
          .ricetta img {width: 300px;}
          .descrizione_ricetta {
             margin-top: 10px;
