lascio bianco le quanittà nulle in ricetta

--- a/blog/templates/blog/ricetta.html
+++ b/blog/templates/blog/ricetta.html
@@ -64,7 +64,8 @@
         <ul>
           {% for ingredient in ingredients %}
             <li>
-              {{ ingredient.ingredient.name }}: {{ ingredient.quantity }} 
+              {{ ingredient.ingredient.name }}: 
+              {%if ingredient.quantity %}{{ ingredient.quantity }}{%endif%} 
               {%if ingredient.unit %} {{ ingredient.unit }} {%endif%}
             </li>
           {% endfor %}
